--- a/quiz achivements/achivements.css
+++ b/quiz achivements/achivements.css
@@ -46,9 +46,11 @@ body {
   h1{
     display: flex;
     justify-content: center;
+    padding: 45px;
   }
 
     .achivement-position{
         display: flex;
         align-items: center;
+        padding-bottom: 25px;
     }
